@@ -12,34 +12,37 @@ package org.eclipse.rdf4j.sail.shacl;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import org.eclipse.rdf4j.model.util.Values;
 import org.eclipse.rdf4j.model.vocabulary.RDF;
 import org.eclipse.rdf4j.model.vocabulary.RDFS;
 import org.eclipse.rdf4j.repository.sail.SailRepository;
 import org.eclipse.rdf4j.repository.sail.SailRepositoryConnection;
 import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.slf4j.LoggerFactory;
 
+import ch.qos.logback.classic.Logger;
 import ch.qos.logback.classic.spi.ILoggingEvent;
 import ch.qos.logback.core.AppenderBase;
 
 public class UnknownShapesTest {
+	private TestAppender appender;
+
+	@BeforeEach
+	public void beforeEach() {
+		appender = new TestAppender();
+
+		Logger root = (Logger) LoggerFactory.getLogger(Logger.ROOT_LOGGER_NAME);
+		root.addAppender(appender);
+	}
 
 	@Test
 	public void testPropertyShapes() throws IOException, InterruptedException {
-		ch.qos.logback.classic.Logger root = (ch.qos.logback.classic.Logger) LoggerFactory
-				.getLogger(ch.qos.logback.classic.Logger.ROOT_LOGGER_NAME);
-
-		MyAppender newAppender = new MyAppender();
-		root.addAppender(newAppender);
-
 		SailRepository shaclRepository = Utils.getInitializedShaclRepository("unknownProperties.trig");
 
 		try (SailRepositoryConnection connection = shaclRepository.getConnection()) {
@@ -50,7 +53,7 @@ public class UnknownShapesTest {
 
 		Thread.sleep(100);
 
-		List<String> relevantLog = newAppender.logged.stream()
+		List<String> relevantLog = appender.logged.stream()
 				.filter(m -> m.startsWith("Unsupported SHACL feature"))
 				.distinct()
 				.sorted(String::compareTo)
@@ -67,15 +70,8 @@ public class UnknownShapesTest {
 
 	}
 
-	@Disabled
 	@Test
 	public void testComplexPath() throws IOException, InterruptedException {
-		ch.qos.logback.classic.Logger root = (ch.qos.logback.classic.Logger) LoggerFactory
-				.getLogger(ch.qos.logback.classic.Logger.ROOT_LOGGER_NAME);
-
-		MyAppender newAppender = new MyAppender();
-		root.addAppender(newAppender);
-
 		SailRepository shaclRepository = Utils.getInitializedShaclRepository("complexPath.trig");
 
 		try (SailRepositoryConnection connection = shaclRepository.getConnection()) {
@@ -86,25 +82,55 @@ public class UnknownShapesTest {
 
 		Thread.sleep(100);
 
-		Set<String> relevantLog = newAppender.logged.stream()
+		Set<String> relevantLog = appender.logged.stream()
 				.filter(m -> m.startsWith("Unsupported SHACL feature"))
 				.map(s -> s.replaceAll("\r\n|\r|\n", " "))
 				.map(String::trim)
 				.collect(Collectors.toSet());
 
-		Set<String> expected = new HashSet<>(Arrays.asList(
-				"Unsupported SHACL feature with complex path. Only single predicate paths, or single predicate inverse paths are supported. <http://example.com/ns#alternativePath> shape has been deactivated!  @prefix sh: <http://www.w3.org/ns/shacl#> .  <http://example.com/ns#alternativePath> sh:path [       sh:alternativePath <http://example.com/ns#father>     ] .",
-				"Unsupported SHACL feature with complex path. Only single predicate paths, or single predicate inverse paths are supported. <http://example.com/ns#pathSequence> shape has been deactivated!  @prefix sh: <http://www.w3.org/ns/shacl#> .  <http://example.com/ns#pathSequence> sh:path (<http://example.com/ns#parent> <http://example.com/ns#firstName>) .",
-				"Unsupported SHACL feature with complex path. Only single predicate paths, or single predicate inverse paths are supported. <http://example.com/ns#inverseOfWithComplex> shape has been deactivated!  @prefix sh: <http://www.w3.org/ns/shacl#> .  <http://example.com/ns#inverseOfWithComplex> sh:path [       sh:inversePath [           sh:zeroOrMorePath <http://example.com/ns#inverseThis>         ]     ] ."));
+		Set<String> expected = Set.of(
+				"Unsupported SHACL feature detected: InversePath{ ZeroOrMorePath{ SimplePath{ <http://example.com/ns#inverseThis> } } }. Shape ignored! <http://example.com/ns#inverseOfWithComplex> a sh:PropertyShape;   sh:path [       sh:inversePath [           sh:zeroOrMorePath <http://example.com/ns#inverseThis>         ]     ];   sh:minCount 1 .",
+				"Unsupported SHACL feature detected: InversePath{ ZeroOrMorePath{ SimplePath{ <http://example.com/ns#inverseThis> } } }. Shape ignored! <http://example.com/ns#inverseOfWithComplex> a sh:PropertyShape;   sh:path [       sh:inversePath [           sh:zeroOrMorePath <http://example.com/ns#inverseThis>         ]     ];   sh:datatype xsd:int .",
+				"Unsupported SHACL feature detected: AlternativePath{ SimplePath{ <http://example.com/ns#father> } }. Shape ignored! <http://example.com/ns#alternativePath> a sh:PropertyShape;   sh:path [       sh:alternativePath <http://example.com/ns#father>     ];   sh:minCount 1 .",
+				"Unsupported SHACL feature detected: SequencePath{ [SimplePath{ <http://example.com/ns#parent> }, SimplePath{ <http://example.com/ns#firstName> }] }. Shape ignored! <http://example.com/ns#pathSequence> a sh:PropertyShape;   sh:path (<http://example.com/ns#parent> <http://example.com/ns#firstName>);   sh:minCount 1 ."
+		);
 
 		Assertions.assertEquals(expected, relevantLog);
 
 		shaclRepository.shutDown();
 	}
 
-	static class MyAppender extends AppenderBase<ILoggingEvent> {
+	@Test
+	public void testThatUnknownPathsAreIgnored() throws IOException {
+		SailRepository shaclRepository = Utils.getInitializedShaclRepository("complexPath.trig");
 
-		List<String> logged = new ArrayList<>();
+		// trigger SPARQL based validation
+		try (SailRepositoryConnection connection = shaclRepository.getConnection()) {
+			connection.begin();
+			connection.add(RDF.TYPE, RDF.TYPE, RDFS.RESOURCE);
+			connection.commit();
+		}
+
+		// trigger transactional validation
+		try (SailRepositoryConnection connection = shaclRepository.getConnection()) {
+			connection.begin();
+			connection.add(RDFS.RESOURCE, RDF.TYPE, RDFS.RESOURCE);
+			connection.commit();
+		}
+
+		// trigger requiresEvaluation(...) check
+		try (SailRepositoryConnection connection = shaclRepository.getConnection()) {
+			connection.begin();
+			connection.add(RDFS.RESOURCE, Values.iri("http://example.com/ns#parent"), RDFS.RESOURCE);
+			connection.commit();
+		}
+
+		shaclRepository.shutDown();
+	}
+
+	private static class TestAppender extends AppenderBase<ILoggingEvent> {
+
+		private final List<String> logged = new ArrayList<>();
 
 		@Override
 		public synchronized void doAppend(ILoggingEvent eventObject) {
